# soloud

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  README.md  soloudConfig.cmake.in
assets/audio/: attribution.txt
cmake/: demos_common.cmake  tests_common.cmake
demos/: CMakeLists.txt
demos/2d/: CMakeLists.txt  main.cpp
demos/annex/: CMakeLists.txt  main.cpp
demos/assets/: soloud_assets_stamp.txt
demos/cmake/: demos_common.cmake
demos/common/: asset_manager.cpp  asset_manager.h  simple_window.h  window.cpp  window.h
demos/enumerate/: CMakeLists.txt
demos/env/: CMakeLists.txt  main.cpp
demos/filterfolio/: CMakeLists.txt  main.cpp
demos/mixbusses/: CMakeLists.txt  main.cpp
demos/monotone/: CMakeLists.txt  main.cpp
demos/multimusic/: CMakeLists.txt  main.cpp
demos/piano/: CMakeLists.txt  main.cpp
demos/radiogaga/: CMakeLists.txt  main.cpp
demos/simplest/: CMakeLists.txt  main.cpp
demos/speechfilter/: CMakeLists.txt  main.cpp
demos/tedsid/: CMakeLists.txt  main.cpp
demos/thebutton/: CMakeLists.txt  main.cpp
demos/wavformats/: CMakeLists.txt  main.cpp
demos/welcome/: CMakeLists.txt  main.cpp
include/: soloud.h  soloud_audiosource.h  soloud_ay.h  soloud_bassboostfilter.h  soloud_biquadresonantfilter.h  soloud_bus.h  soloud_dcremovalfilter.h  soloud_duckfilter.h  soloud_echofilter.h  soloud_eqfilter.h  soloud_error.h  soloud_fader.h  soloud_fft.h  soloud_fftfilter.h  soloud_file.h  soloud_filter.h  soloud_flangerfilter.h  soloud_freeverbfilter.h  soloud_internal.h  soloud_lofifilter.h  soloud_misc.h  soloud_monotone.h  soloud_noise.h  soloud_queue.h  soloud_robotizefilter.h  soloud_sfxr.h  soloud_speech.h  soloud_tedsid.h  soloud_thread.h  soloud_vic.h  soloud_vizsn.h  soloud_wav.h  soloud_waveshaperfilter.h  soloud_wavstream.h  zx7decompress.h
src/audiosource/ay/: chipplayer.cpp  chipplayer.h  sndbuffer.cpp  sndbuffer.h  sndchip.cpp  sndchip.h  sndrender.cpp  sndrender.h  soloud_ay.cpp
src/audiosource/vizsn/: soloud_vizsn.cpp
src/core/: soloud.cpp  soloud_audiosource.cpp  soloud_bus.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_fader.cpp  soloud_fft.cpp  soloud_fft_lut.cpp  soloud_file.cpp  soloud_filter.cpp  soloud_misc.cpp  soloud_queue.cpp  soloud_thread.cpp
src/filter/: soloud_biquadresonantfilter.cpp  soloud_dcremovalfilter.cpp  soloud_eqfilter.cpp  soloud_fftfilter.cpp  soloud_freeverbfilter.cpp
src/filters/: soloud_bassboostfilter.cpp  soloud_duckfilter.cpp  soloud_echofilter.cpp  soloud_flangerfilter.cpp  soloud_lofifilter.cpp  soloud_robotizefilter.cpp  soloud_waveshaperfilter.cpp
tests/: CMakeLists.txt
tests/annex/: CMakeLists.txt  main.cpp
tests/common/: themes.h  window.cpp  window.h
tests/enumerate/: CMakeLists.txt  main.cpp
tests/env/: CMakeLists.txt  main.cpp
tests/filterfolio/: CMakeLists.txt
tests/piano/: CMakeLists.txt  main.cpp  rt_midi.cpp
tests/simplest/: CMakeLists.txt  main.cpp
tests/welcome/: CMakeLists.txt  main.cpp
