add_subdirectory(2d)
add_subdirectory(annex)
add_subdirectory(enumerate)
add_subdirectory(env)
add_subdirectory(filterfolio)
add_subdirectory(mixbusses)
add_subdirectory(monotone)
add_subdirectory(multimusic)
add_subdirectory(piano)
add_subdirectory(radiogaga)
add_subdirectory(simplest)
add_subdirectory(welcome)